--- a/SciTEDirectory.properties
+++ b/SciTEDirectory.properties
@@ -10,17 +10,17 @@ command.go.$(file.patterns.py)=$(PYTHON_ROOT)\python -u "$(FileNameExt)"
 command.go.subsystem.*.py=0
 
 command.name.1.$(file.patterns.pyall)=Make MSVC
-command.1.$(file.patterns.pyall)=$(PYTHON_ROOT)\python setup.py build_ext --inplace
+command.1.$(file.patterns.pyall)=msvc
 command.subsystem.1.$(file.patterns.pyall)=0
 
 command.name.2.$(file.patterns.pyall)=Clean MSVC
-command.2.$(file.patterns.pyall)=clean
+command.2.$(file.patterns.pyall)=msvc clean
 command.subsystem.2.$(file.patterns.pyall)=0
 
 command.name.3.$(file.patterns.pyall)=Make MINGW
-command.3.$(file.patterns.pyall)=make
+command.3.$(file.patterns.pyall)=mingw
 command.subsystem.3.$(file.patterns.pyall)=0
 
 command.name.4.$(file.patterns.pyall)=Clean MINGW
-command.4.$(file.patterns.pyall)=make clean_all
+command.4.$(file.patterns.pyall)=mingw clean
 command.subsystem.4.$(file.patterns.pyall)=0
