Se simplifica vscode task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,10 @@
 {
     "version": "0.1.0",
-    "command": "%USERPROFILE%/Apps/WinPython/3.6.1.0Qt5/python-3.6.1.amd64/python.exe",
+    "command": "python.exe",
     "isShellCommand": true,
     "args": ["-u", "${file}"],
     "showOutput": "always",
         "options": {
         "cwd": "${fileDirname}"
-    },
-    "linux": {
-        "command": "/home/cheve/Devel/z_venvs/py3.5gen/bin/python"
     }
 }
